--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -14,9 +14,11 @@ jobs:
       - name: "Create comment"
         uses: "peter-evans/create-or-update-comment@v4"
         with:
+          token: ${{ secrets.GITHUB_TOKEN }} 
           issue-number: '${{ github.event.issue.number}}'
           body: |
             Hello, we will get to you shortly
             Have a nice day
           reactions: '+1'
+
           
